--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,61 @@ body::-webkit-scrollbar{
     text-wrap: balance;
   }
 }
+
+
+
+.navbar .max1 {
+  position: relative;
+}
+
+.max1::after {
+  content: "";
+  height: 1px;
+  background-color: #000;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transition: all 0.3s ease-in-out;
+  width: 0; 
+}
+
+.max1:hover::before,
+.max1:hover::after {
+  width: 100%;
+  transition: all 0.3s ease-in-out; 
+}
+
+.max1::before {
+  content: "";
+  height: 1px;
+  background-color: #000;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transition: all 0.3s ease-in-out; 
+  width: 0; 
+}
+
+.max1:hover::before {
+  width: 100%; 
+  transition: all 0.3s ease-in-out; 
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; 
+  background-color: rgba(0, 0, 0, 0.5);
+   opacity: 0;
+  transition: opacity 0.3s ease;
+  border-radius: 3px; 
+}
+
+.relative:hover .overlay {
+  opacity: 1;
+  
+}
+
+
