--- a/app/globals.css
+++ b/app/globals.css
@@ -79,3 +79,21 @@ body::-webkit-scrollbar{
 
 
 
+@keyframes fadeInUp {
+  from {
+      opacity: 0;
+      transform: translateY(20px);
+  }
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
+}
+
+.animated-header {
+  animation: fadeInUp 1s ease-in-out;
+}
+
+.animated-subheader {
+  animation: fadeInUp 2s ease-in-out;
+}
