--- a/app/globals.css
+++ b/app/globals.css
@@ -79,21 +79,33 @@ body::-webkit-scrollbar{
 
 
 
-@keyframes fadeInUp {
+@keyframes slideInLeft {
   from {
       opacity: 0;
-      transform: translateY(20px);
+      transform: translateX(-100%);
   }
   to {
       opacity: 1;
-      transform: translateY(0);
+      transform: translateX(0);
+  }
+}
+
+@keyframes slideInRight {
+  from {
+      opacity: 0;
+      transform: translateX(100%);
+  }
+  to {
+      opacity: 1;
+      transform: translateX(0);
   }
 }
 
 .animated-header {
-  animation: fadeInUp 1s ease-in-out;
+  animation: slideInLeft 1s ease-in-out forwards;
 }
 
 .animated-subheader {
-  animation: fadeInUp 2s ease-in-out;
+  animation: slideInRight 1.5s ease-in-out forwards;
+  animation-delay: 1s; 
 }
